# webgear

./: .gitignore  .hlint.yaml  README.md  cabal.project  flake.nix  fourmolu.yaml  hie.yaml  stack-8.10.7.yaml  stack-8.8.4.yaml  stack-9.0.1.yaml  stack-9.0.2.yaml  stack-9.2.2.yaml  stack-9.2.3.yaml  stack-9.2.6.yaml  stack-9.2.8.yaml  stack-9.4.4.yaml  stack-9.4.7.yaml  stack-9.4.8.yaml  stack-9.6.3.yaml  stack-9.6.4.yaml  stack-9.6.6.yaml  stack-9.8.1.yaml  stack.yaml
.github/workflows/: ci.yaml  publish.yaml
nix/haskell-modules/: bytestring-conversion-0.3.2.nix
nix/haskell-packages/: bytestring-conversion-0.3.2.nix  esqueleto.nix  generics-sop-0.5.1.3.nix  openapi3-3.2.3.nix  scotty.nix  servant-server.nix  servant.nix
nix/overlays/: haskell.nix
scripts/: hackage-upload.sh  prepare-release.sh
webgear-benchmarks/: README.md  criterion-report.html  webgear-benchmarks.cabal
webgear-benchmarks/src/: Main.hs  Scotty.hs  Servant.hs  WebGear.hs
webgear-benchmarks/src/users/: Main.hs  Model.hs  Scotty.hs  Servant.hs  WebGear.hs
webgear-core/: CHANGELOG.md  README.md  webgear-core.cabal
webgear-core/src/: WebGear.hs
webgear-core/src/WebGear/: Core.hs
webgear-core/src/WebGear/Core/: Handler.hs  MIMEType.hs  MIMETypes.hs  Middlewares.hs  Modifiers.hs  Request.hs  Response.hs  Trait.hs  Traits.hs
webgear-core/src/WebGear/Core/Handler/: Static.hs
webgear-core/src/WebGear/Core/MIMEType/: FormURLEncoded.hs  JSON.hs  MultiPartFormData.hs  OctetStream.hs  PlainText.hs
webgear-core/src/WebGear/Core/Middleware/: Body.hs  Header.hs  Method.hs  Path.hs  QueryParam.hs  Status.hs
webgear-core/src/WebGear/Core/Middleware/Auth/: Basic.hs  Common.hs  JWT.hs
webgear-core/src/WebGear/Core/Trait/: Body.hs  Cookie.hs  Header.hs  Method.hs  Path.hs  QueryParam.hs  Status.hs
webgear-core/src/WebGear/Core/Trait/Auth/: Basic.hs  Common.hs  JWT.hs
webgear-example-realworld/: README.md  webgear-example-realworld.cabal
webgear-example-realworld/src/: Main.hs
webgear-example-realworld/src/API/: Article.hs  Comment.hs  Common.hs  Profile.hs  Tag.hs  UI.hs  User.hs
webgear-example-realworld/src/Model/: Article.hs  Comment.hs  Common.hs  Entities.hs  Profile.hs  Tag.hs  User.hs
webgear-example-realworld/ui/: index.html
webgear-example-users/: README.md  postman-collection.json  webgear-example-users.cabal
webgear-example-users/src/: Main.hs
webgear-openapi/: CHANGELOG.md  README.md  webgear-openapi.cabal
webgear-openapi/src/WebGear/: OpenApi.hs
webgear-openapi/src/WebGear/OpenApi/: Handler.hs  Middlewares.hs  Traits.hs
webgear-openapi/src/WebGear/OpenApi/Middleware/: Body.hs  Header.hs  Method.hs  Path.hs  QueryParam.hs  Status.hs
webgear-openapi/src/WebGear/OpenApi/Middleware/Auth/: Basic.hs  JWT.hs
webgear-openapi/src/WebGear/OpenApi/Trait/: Auth.hs  Body.hs  Cookie.hs  Header.hs  Method.hs  Path.hs  QueryParam.hs  Status.hs
webgear-openapi/src/WebGear/OpenApi/Trait/Auth/: Basic.hs  JWT.hs
webgear-server/: CHANGELOG.md  README.md  webgear-server.cabal
webgear-server/src/: WebGear.hs
webgear-server/src/WebGear/: Server.hs
webgear-server/src/WebGear/Server/: Handler.hs  MIMEType.hs  MIMETypes.hs  Middlewares.hs  Traits.hs
webgear-server/src/WebGear/Server/Middleware/: Body.hs  Header.hs  Method.hs  Path.hs  QueryParam.hs  Status.hs
webgear-server/src/WebGear/Server/Middleware/Auth/: Basic.hs  JWT.hs
webgear-server/src/WebGear/Server/Trait/: Body.hs  Cookie.hs  Header.hs  Method.hs  Path.hs  QueryParam.hs  Status.hs
webgear-server/src/WebGear/Server/Trait/Auth/: Basic.hs  JWT.hs
webgear-server/test/: Main.hs  Properties.hs  Unit.hs
webgear-server/test/Properties/Trait/: Body.hs  Header.hs  Method.hs  Params.hs  Path.hs  QueryParam.hs
webgear-server/test/Properties/Trait/Auth/: Basic.hs
webgear-server/test/Unit/Trait/: Header.hs  Path.hs
webgear-swagger/: CHANGELOG.md  README.md  webgear-swagger.cabal
webgear-swagger-ui/: CHANGELOG.md  README.md  index.html  webgear-swagger-ui.cabal
webgear-swagger-ui/src/WebGear/Swagger/: UI.hs
webgear-swagger-ui/src/WebGear/Swagger/UI/: Embedded.hs
webgear-swagger/src/WebGear/: Swagger.hs
webgear-swagger/src/WebGear/Swagger/: Handler.hs  Traits.hs
webgear-swagger/src/WebGear/Swagger/Trait/: Auth.hs  Body.hs  Cookie.hs  Header.hs  Method.hs  Path.hs  QueryParam.hs  Status.hs
webgear-swagger/src/WebGear/Swagger/Trait/Auth/: Basic.hs  JWT.hs
