cabal-version:       2.4
name:                webgear-benchmarks
version:             1.5.0
description:         Benchmarks for webgear
homepage:            https://github.com/haskell-webgear/webgear-benchmarks#readme
bug-reports:         https://github.com/haskell-webgear/webgear-benchmarks/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020-2025 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md


source-repository head
  type:      git
  location:  https://github.com/haskell-webgear/webgear-benchmarks

executable benchmarks
  default-language:   Haskell2010
  build-depends:      base >=4.17.0.0 && <4.22
                    , bytestring >=0.11 && <0.13
                    , criterion >=1.6.1.0 && <1.7
                    , http-types ==0.12.*
                    , mtl >=2.2.2 && <2.4
                    , text >=2.0 && <2.2
                    , servant ==0.20.2
                    , servant-server ==0.20.2
                    , scotty ==0.22
                    , wai ==3.2.*
                    , webgear-server ==1.5.0
  default-extensions: Arrows
                      ConstraintKinds
                      DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingVia
                      FlexibleContexts
                      GeneralizedNewtypeDeriving
                      LambdaCase
                      NamedFieldPuns
                      OverloadedStrings
                      QuasiQuotes
                      RankNTypes
                      ScopedTypeVariables
                      TypeApplications
                      TypeOperators
  hs-source-dirs:     src
  main-is:            Main.hs
  other-modules:      Scotty
                    , Servant
                    , WebGear
  ghc-options:        -O2
                      -Wall
                      -Wcompat
                      -Werror
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-deriving-strategies
                      -Wmissing-fields
                      -Wmissing-home-modules
                      -Wno-unticked-promoted-constructors
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages
                      -fshow-warning-groups
                      -rtsopts
                      -threaded
