cabal-version:       2.4

name:                webgear-core
version:             1.0.1
synopsis:            Composable, type-safe library to build HTTP APIs
description:
        WebGear is a library to for building composable, type-safe HTTP APIs.
        See the documentation of WebGear.Core module to get started.
homepage:            https://github.com/haskell-webgear/webgear#readme
bug-reports:         https://github.com/haskell-webgear/webgear/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020-2021 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md


source-repository head
  type:      git
  location:  https://github.com/haskell-webgear/webgear


common webgear-common
  default-language:   Haskell2010
  default-extensions: Arrows
                      ConstraintKinds
                      DataKinds
                      DeriveFunctor
                      DeriveGeneric
                      DerivingStrategies
                      DerivingVia
                      FlexibleContexts
                      FlexibleInstances
                      FunctionalDependencies
                      GeneralizedNewtypeDeriving
                      InstanceSigs
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      OverloadedLists
                      PolyKinds
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TemplateHaskellQuotes
                      TypeApplications
                      TypeFamilies
                      TypeOperators
  build-depends:      base >=4.13.0.0 && <4.17
                    , bytestring >=0.10.10.1 && <0.12
                    , case-insensitive ==1.2.*
                    , filepath ==1.4.*
                    , http-api-data ==0.4.*
                    , http-media ==0.8.*
                    , http-types ==0.12.*
                    , network ==3.1.*
                    , safe-exceptions ==0.1.*
                    , tagged ==0.8.*
                    , template-haskell >=2.15.0.0 && <2.19
                    , text >=1.2.0.0 && <2.1
                    , unordered-containers ==0.2.*
                    , wai ==3.2.*
  ghc-options:        -Wall
                      -Wno-unticked-promoted-constructors
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-fields
                      -Wmissing-home-modules
                      -Wmissing-deriving-strategies
                      -Wpartial-fields
                      -Wredundant-constraints
                      -fshow-warning-groups

  if impl(ghc >= 8.10)
    ghc-options:      -Wunused-packages

library
  import:             webgear-common
  exposed-modules:    WebGear.Core
                    , WebGear.Core.Modifiers
                    , WebGear.Core.Trait
                    , WebGear.Core.Request
                    , WebGear.Core.Response
                    , WebGear.Core.Handler
                    , WebGear.Core.Traits
                    , WebGear.Core.Trait.Auth.Basic
                    , WebGear.Core.Trait.Auth.JWT
                    , WebGear.Core.Trait.Auth.Common
                    , WebGear.Core.Trait.Body
                    , WebGear.Core.Trait.Header
                    , WebGear.Core.Trait.Method
                    , WebGear.Core.Trait.Path
                    , WebGear.Core.Trait.QueryParam
                    , WebGear.Core.Trait.Status
                    , WebGear.Core.Handler.Static
  hs-source-dirs:     src
  build-depends:      arrows ==0.4.*
                    , jose >=0.8.3.1 && <0.10
                    , mime-types ==0.1.*