cabal-version:       2.4

name:                webgear-core
version:             1.5.0
synopsis:            Composable, type-safe library to build HTTP APIs
description:
        WebGear is a library to for building composable, type-safe HTTP APIs.
        See the documentation of WebGear.Core module to get started.
homepage:            https://github.com/haskell-webgear/webgear#readme
bug-reports:         https://github.com/haskell-webgear/webgear/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020-2025 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md


source-repository head
  type:      git
  location:  https://github.com/haskell-webgear/webgear


library
  default-language:   Haskell2010
  default-extensions: Arrows
                      ConstraintKinds
                      DataKinds
                      DeriveFunctor
                      DeriveGeneric
                      DerivingStrategies
                      DerivingVia
                      FlexibleContexts
                      FlexibleInstances
                      FunctionalDependencies
                      GeneralizedNewtypeDeriving
                      InstanceSigs
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedLists
                      OverloadedStrings
                      PolyKinds
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TemplateHaskellQuotes
                      TypeApplications
                      TypeFamilies
                      TypeOperators
  build-depends:      arrows ==0.4.*
                    , base >=4.17.0.0 && <4.22
                    , binary >= 0.8.0.0 && <0.9
                    , bytestring >=0.11.0.0 && <0.13
                    , case-insensitive ==1.2.*
                    , cookie >=0.4.5 && <0.6
                    , http-api-data >=0.5 && <0.7
                    , http-media ==0.8.*
                    , http-types ==0.12.*
                    , jose >=0.10 && <0.12
                    , network >=3.1.0 && <3.3
                    , tagged ==0.8.*
                    , template-haskell >=2.19.0.0 && <2.24
                    , text >=2.0 && <2.2
                    , wai ==3.2.*
                    , wai-app-static ==3.1.*
                    , wai-extra ==3.1.*
  ghc-options:        -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-deriving-strategies
                      -Wmissing-fields
                      -Wmissing-home-modules
                      -Wno-unticked-promoted-constructors
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages
                      -fshow-warning-groups
  exposed-modules:    WebGear.Core
                    , WebGear.Core.Modifiers
                    , WebGear.Core.Trait
                    , WebGear.Core.Request
                    , WebGear.Core.Response
                    , WebGear.Core.Handler
                    , WebGear.Core.MIMETypes
                    , WebGear.Core.Traits
                    , WebGear.Core.Trait.Auth.Basic
                    , WebGear.Core.Trait.Auth.JWT
                    , WebGear.Core.Trait.Auth.Common
                    , WebGear.Core.Trait.Body
                    , WebGear.Core.Trait.Cookie
                    , WebGear.Core.Trait.Header
                    , WebGear.Core.Trait.Method
                    , WebGear.Core.Trait.Path
                    , WebGear.Core.Trait.QueryParam
                    , WebGear.Core.Trait.Status
                    , WebGear.Core.Handler.Static
  hs-source-dirs:     src
