cabal-version:       2.4
name:                webgear-example-realworld
version:             1.3.1
description:         Please see the README at <https://github.com/haskell-webgear/webgear/webgear-example-realworld#readme>
homepage:            https://github.com/haskell-webgear/webgear/webgear-example-realworld#readme
bug-reports:         https://github.com/haskell-webgear/webgear/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020-2024 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md


source-repository head
  type:      git
  location:  https://github.com/haskell-webgear/webgear-example-realworld

executable realworld
  default-language:   Haskell2010
  build-depends:      aeson
                    , base
                    , bytestring
                    , crypton
                    , http-api-data
                    , http-types
                    , jose
                    , lens
                    , monad-time
                    , mtl
                    , openapi3
                    , random
                    , resource-pool
                    , safe-exceptions
                    , sqlite-simple
                    , text
                    , time
                    , uri-encode
                    , wai
                    , wai-app-static
                    , warp
                    , webgear-openapi
                    , webgear-server
                    , webgear-swagger-ui
  default-extensions: Arrows
                      BlockArguments
                      DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      DuplicateRecordFields
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      QuasiQuotes
                      RecordWildCards
                      ScopedTypeVariables
                      TypeApplications
                      TypeOperators
  ghc-options:        -Wall
                      -Wcompat
                      -Werror
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-deriving-strategies
                      -Wmissing-fields
                      -Wmissing-home-modules
                      -Wno-unticked-promoted-constructors
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages
                      -fshow-warning-groups
                      -rtsopts
                      -threaded
                      -with-rtsopts=-N
  hs-source-dirs:     src
  main-is:            Main.hs
  other-modules:      API.Article
                    , API.Comment
                    , API.Common
                    , API.Profile
                    , API.Tag
                    , API.UI
                    , API.User
                    , Model.Entities
                    , Model.Article
                    , Model.Comment
                    , Model.Profile
                    , Model.Tag
                    , Model.User
                    , Model.Common
