cabal-version:       2.4
name:                webgear-example-users
version:             1.3.1
description:         Please see the README at <https://github.com/haskell-webgear/webgear/webgear-example-users#readme>
homepage:            https://github.com/haskell-webgear/webgear/webgear-example-users#readme
bug-reports:         https://github.com/haskell-webgear/webgear/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020-2024 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md


source-repository head
  type:      git
  location:  https://github.com/haskell-webgear/webgear

executable users
  default-language:   Haskell2010
  build-depends:      aeson
                    , base
                    , bytestring
                    , hashable
                    , http-api-data
                    , http-types
                    , mtl
                    , text
                    , time
                    , unordered-containers
                    , wai
                    , warp
                    , webgear-server
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wno-unticked-promoted-constructors
                      -Wredundant-constraints
                      -rtsopts
                      -threaded
                      -with-rtsopts=-N
  main-is:            Main.hs
  hs-source-dirs:     src
