cabal-version:       2.4

name:                webgear-openapi
version:             1.4.0
synopsis:            Composable, type-safe library to build HTTP API servers
description:
    WebGear is a library to for building composable, type-safe HTTP API servers.
    This package can be used to generate OpenAPI specifications from WebGear
    applications.
homepage:            https://github.com/haskell-webgear/webgear#readme
bug-reports:         https://github.com/haskell-webgear/webgear/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020-2025 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md


source-repository head
  type:      git
  location:  https://github.com/haskell-webgear/webgear


library
  exposed-modules:    WebGear.OpenApi
                    , WebGear.OpenApi.Handler
                    , WebGear.OpenApi.Traits
                    , WebGear.OpenApi.Trait.Auth
                    , WebGear.OpenApi.Trait.Auth.Basic
                    , WebGear.OpenApi.Trait.Auth.JWT
                    , WebGear.OpenApi.Trait.Body
                    , WebGear.OpenApi.Trait.Cookie
                    , WebGear.OpenApi.Trait.Header
                    , WebGear.OpenApi.Trait.Method
                    , WebGear.OpenApi.Trait.Path
                    , WebGear.OpenApi.Trait.QueryParam
                    , WebGear.OpenApi.Trait.Status
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: Arrows
                      ConstraintKinds
                      DataKinds
                      DeriveFunctor
                      DeriveGeneric
                      DerivingStrategies
                      DerivingVia
                      FlexibleContexts
                      FlexibleInstances
                      FunctionalDependencies
                      GeneralizedNewtypeDeriving
                      InstanceSigs
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedLists
                      OverloadedStrings
                      PolyKinds
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TemplateHaskellQuotes
                      TupleSections
                      TypeApplications
                      TypeFamilies
                      TypeOperators
  build-depends:      arrows ==0.4.*
                    , base >=4.17.0.0 && <4.22
                    , http-media ==0.8.*
                    , http-types ==0.12.*
                    , insert-ordered-containers ==0.2.*
                    , lens >=5.2 && <5.4
                    , mtl >=2.2 && <2.4
                    , openapi3 >=3.2.0 && <3.3
                    , text >=2.0 && <2.2
                    , webgear-core ^>=1.4.0
  ghc-options:        -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-deriving-strategies
                      -Wmissing-fields
                      -Wmissing-home-modules
                      -Wno-unticked-promoted-constructors
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages
                      -fshow-warning-groups
